--- a/APIByCategory.mediawiki
+++ b/APIByCategory.mediawiki
@@ -12,7 +12,7 @@
 
 Introduction to [Category]
  Clicking this link will take you to a detailed description of that category in SDL 1.3.  
-
+  
 {|
 |<tablewidth="100%">'''Related Functions'''
 |'''Header'''
@@ -93,8 +93,8 @@ Each section below includes
 |<tablewidth="100%">'''Related Functions'''
 |'''Header'''
 |-
-|[[]]
-|[[]]
+|[CategoryForceFeedback|Force Feedback Support]]
+|[[http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_haptic.h SDL_haptic.h]
 |}
 
 === Audio ===
@@ -104,8 +104,8 @@ Each section below includes
 |<tablewidth="100%">'''Related Functions'''
 |'''Header'''
 |-
-|[[]]
-|[[]]
+|[CategoryAudio|Audio Device Management, Playing and Recording]]
+|[[http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_audio.h SDL_audio.h]
 |}
 
 === File I/O Abstraction ===
@@ -115,7 +115,7 @@ Each section below includes
 |<tablewidth="100%">'''Related Functions'''
 |'''Header'''
 |-
-|[[]]
+|[[CategoryIO|]]
 |[[]]
 |}
 
@@ -126,7 +126,7 @@ Each section below includes
 |<tablewidth="100%">'''Related Functions'''
 |'''Header'''
 |-
-|[[]]
+|[[CategorySharedObject|]]
 |[[]]
 |}
 
@@ -137,7 +137,7 @@ Each section below includes
 |<tablewidth="100%">'''Related Functions'''
 |'''Header'''
 |-
-|[[]]
+|[[CategoryThread|]]
 |[[]]
 |}
 
@@ -148,7 +148,7 @@ Each section below includes
 |<tablewidth="100%">'''Related Functions'''
 |'''Header'''
 |-
-|[[]]
+|[[CategoryTimer|]]
 |[[]]
 |}
 
@@ -159,7 +159,7 @@ Each section below includes
 |<tablewidth="100%">'''Related Functions'''
 |'''Header'''
 |-
-|[[]]
+|[[CategoryCPU|]]
 |[[]]
 |}
 
@@ -170,7 +170,7 @@ Each section below includes
 |<tablewidth="100%">'''Related Functions'''
 |'''Header'''
 |-
-|[[]]
+|[[CategoryPower|]]
 |[[]]
 |}
 
@@ -181,7 +181,7 @@ Each section below includes
 |<tablewidth="100%">'''Related Functions'''
 |'''Header'''
 |-
-|[[]]
+|[[CategoryEndian|]]
 |[[]]
 |}
 
