--- a/APIByCategory.mediawiki
+++ b/APIByCategory.mediawiki
@@ -8,42 +8,13 @@
 
 
 == Functions by Type ==
-''In each section below you will find:''
-
-Introduction to [Category]
- Clicking this link will take you to a detailed description of that category in SDL 1.3.  
-  
-{|
-|<tablewidth="100%">'''Related Functions'''
-|'''Header'''
-|-
-|This column contains 1 or more links to pages with complete function lists.  You can jump directly from these lists to detailed pages about each function.
-|This column contains a link to the actual header file.
-|}
-
--OR -
-
-In each section:
-* For more detailed information on each Category, including how to get started, answers to common questions and errors, and more, click the '''Introduction to...''' link in each section
-* For a list of functions found in each header click the link under '''Related Functions'''
-* You will find links to detailed pages about each function on those pages
-* For the header file itself click the link under '''Header''' in each section
-
--OR-
-
-Each section below includes 
-* a link to introductory information about each function type including, where relevant:
-* <<Color2(green,Add a list here of the common sections found on each introductory page as the list develops.)>>
-* a link to one or more pages containing a complete list of functions belonging to each header in that category
-* listed functions link to detailed information on each
-* a link to the header page
 
 === Initialization ===
 [[#InitI|Introduction to Initialization]]
 
 {|
-|<tablewidth="100%">'''Related Functions'''
-|'''Header'''
+|<tablewidth="100%">'''View a List of Functions Related to...'''
+|'''View the Header'''
 |-
 |[CategoryInit|Initialization & Shutdown]]
 |[[http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL.h SDL.h]
@@ -53,8 +24,8 @@ Each section below includes
 [[#VideoI|Introduction to Video]]
 
 {|
-|<tablewidth="100%">'''Related Functions'''
-|'''Header'''
+|<tablewidth="100%">'''View a List of Functions Related to...'''
+|'''View the Header'''
 |-
 |[CategoryVideo|Display Management, Window Management and Rendering]]
 |[[http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_video.h SDL_video.h]
@@ -73,8 +44,8 @@ Each section below includes
 [[#InputI|Introduction to Input]]
 
 {|
-|<tablewidth="100%">'''Related Functions'''
-|'''Header'''
+|<tablewidth="100%">'''View a List of Functions Related to...'''
+|'''View the Header'''
 |-
 |[CategoryJoystick|Joystick Support]]
 |[[http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_joystick.h SDL_joystick.h]
@@ -90,8 +61,8 @@ Each section below includes
 [[#FFI|Introduction to Force Feedback]]
 
 {|
-|<tablewidth="100%">'''Related Functions'''
-|'''Header'''
+|<tablewidth="100%">'''View a List of Functions Related to...'''
+|'''View the Header'''
 |-
 |[CategoryForceFeedback|Force Feedback Support]]
 |[[http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_haptic.h SDL_haptic.h]
@@ -101,8 +72,8 @@ Each section below includes
 [[#AudioI|Introduction to Audio]]
 
 {|
-|<tablewidth="100%">'''Related Functions'''
-|'''Header'''
+|<tablewidth="100%">'''View a List of Functions Related to...'''
+|'''View the Header'''
 |-
 |[CategoryAudio|Audio Device Management, Playing and Recording]]
 |[[http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_audio.h SDL_audio.h]
@@ -112,30 +83,30 @@ Each section below includes
 [[#I/OI|Introduction to File I/O Abstraction]]
 
 {|
-|<tablewidth="100%">'''Related Functions'''
-|'''Header'''
+|<tablewidth="100%">'''View a List of Functions Related to...'''
+|'''View the Header'''
 |-
-|[[CategoryIO|]]
-|[[]]
+|[CategoryIO|File I/O Abstraction]]
+|[[http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_rwops.h SDL_rwops.h]
 |}
 
 === Shared Object Support ===
 [[#SOSI|Introduction to Shared Object Support]]
 
 {|
-|<tablewidth="100%">'''Related Functions'''
-|'''Header'''
+|<tablewidth="100%">'''View a List of Functions Related to...'''
+|'''View the Header'''
 |-
-|[[CategorySharedObject|]]
-|[[]]
+|[CategorySharedObject|Shared Object Loading and Function Lookup]]
+|[[http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_loadso.h SDL_loadso.h]
 |}
 
 === Threads ===
 [[#ThreadsI|Introduction to Threads]]
 
 {|
-|<tablewidth="100%">'''Related Functions'''
-|'''Header'''
+|<tablewidth="100%">'''View a List of Functions Related to...'''
+|'''View the Header'''
 |-
 |[[CategoryThread|]]
 |[[]]
@@ -145,8 +116,8 @@ Each section below includes
 [[#TimersI|Introduction to Timers]]
 
 {|
-|<tablewidth="100%">'''Related Functions'''
-|'''Header'''
+|<tablewidth="100%">'''View a List of Functions Related to...'''
+|'''View the Header'''
 |-
 |[[CategoryTimer|]]
 |[[]]
@@ -156,8 +127,8 @@ Each section below includes
 [[#CPUI|Introduction to CPU Feature Detection]]
 
 {|
-|<tablewidth="100%">'''Related Functions'''
-|'''Header'''
+|<tablewidth="100%">'''View a List of Functions Related to...'''
+|'''View the Header'''
 |-
 |[[CategoryCPU|]]
 |[[]]
@@ -167,8 +138,8 @@ Each section below includes
 [[#PowerI|Introduction to Power Management]]
 
 {|
-|<tablewidth="100%">'''Related Functions'''
-|'''Header'''
+|<tablewidth="100%">'''View a List of Functions Related to...'''
+|'''View the Header'''
 |-
 |[[CategoryPower|]]
 |[[]]
@@ -178,8 +149,8 @@ Each section below includes
 [[#EndianI|Introduction to Endian]]
 
 {|
-|<tablewidth="100%">'''Related Functions'''
-|'''Header'''
+|<tablewidth="100%">'''View a List of Functions Related to...'''
+|'''View the Header'''
 |-
 |[[CategoryEndian|]]
 |[[]]
@@ -212,3 +183,22 @@ Each section below includes
 <span id="PowerI"></span>'''Introduction to Power Management'''
 
 <span id="EndianI"></span>'''Introduction to Endian Independence'''
+
+----
+<<Color2(green,This section is junk I don't want to lose yet but will most likely delete. Ignore it.)>>
+-OR -
+
+In each section:
+* For more detailed information on each Category, including how to get started, answers to common questions and errors, and more, click the '''Introduction to...''' link in each section
+* For a list of functions found in each header click the link under '''Related Functions'''
+* You will find links to detailed pages about each function on those pages
+* For the header file itself click the link under '''Header''' in each section
+
+-OR-
+
+Each section below includes 
+* a link to introductory information about each function type including, where relevant:
+* <<Color2(green,Add a list here of the common sections found on each introductory page as the list develops.)>>
+* a link to one or more pages containing a complete list of functions belonging to each header in that category
+* listed functions link to detailed information on each
+* a link to the header page
